--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,30 +1,32 @@
-<form class="form-card" [formGroup]="loginForm">
-  <fieldset>
-    <legend>Login</legend>
-    <div class="form-group">
-        <label for="email" class="form-label">Email:</label>
-        <input id="email" type="email" class="form-control"
-          [class.is-invalid]="email.invalid && email.touched"
-          formControlName="email" required>
+<div class="d-flex align-items-center justify-content-center vh-100">
+  <form class="form-card col-md-3" [formGroup]="loginForm">
+    <fieldset>
+      <legend>Login</legend>
+      <div class="form-group">
+          <label for="email" class="form-label">Email:</label>
+          <input id="email" type="email" class="form-control"
+            [class.is-invalid]="email.invalid && email.touched"
+            formControlName="email" required>
 
-        <div *ngIf="(email.invalid && email.touched) || email.dirty">
-          <small *ngIf="email.errors?.required" class="text-danger">Email is required</small>
-          <!--question mark(?) is a safe navigation operator-->
-          <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address</small>
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="password" class="form-label">Password:</label>
-        <input id="password" type="password" class="form-control"
-          [class.is-invalid]="password.invalid && password.touched"
-          formControlName="password" required>
+          <div *ngIf="(email.invalid && email.touched) || email.dirty">
+            <small *ngIf="email.errors?.required" class="text-danger">Email is required</small>
+            <!--question mark(?) is a safe navigation operator-->
+            <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address</small>
+          </div>
+      </div>
+      <div class="form-group">
+          <label for="password" class="form-label">Password:</label>
+          <input id="password" type="password" class="form-control"
+            [class.is-invalid]="password.invalid && password.touched"
+            formControlName="password" required>
 
-        <div *ngIf="(password.invalid && password.touched) || password.dirty">
-          <small *ngIf="password.errors?.required" class="text-danger">Password is required</small>
-        </div>
+          <div *ngIf="(password.invalid && password.touched) || password.dirty">
+            <small *ngIf="password.errors?.required" class="text-danger">Password is required</small>
+          </div>
+      </div>
+    </fieldset>
+    <div class="action-buttons">
+      <button type="submit" class="btn btn-primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button>
     </div>
-  </fieldset>
-  <div class="action-buttons">
-    <button type="submit" class="btn btn-primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button>
-  </div>
-</form>
+  </form>
+</div>
