--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -9,8 +9,8 @@
             formControlName="email" required>
 
           <div *ngIf="(email.invalid && email.touched) || email.dirty">
-            <small *ngIf="email.errors?.required" class="text-danger">Email is required</small>
             <!--question mark(?) is a safe navigation operator-->
+            <small *ngIf="email.errors?.required" class="text-danger">Email is required</small>
             <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address</small>
           </div>
       </div>
@@ -21,6 +21,7 @@
             formControlName="password" required>
 
           <div *ngIf="(password.invalid && password.touched) || password.dirty">
+            <!--question mark(?) is a safe navigation operator-->
             <small *ngIf="password.errors?.required" class="text-danger">Password is required</small>
           </div>
       </div>
