--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -1,1 +1,32 @@
-<p>user-list works!</p>
+<div class="container">
+  <div class="mt-4 mb-2">
+    <span class="text-muted btn-align">List of users</span>
+    <a routerLink="/users/create" class="btn btn-outline-secondary float-end">+</a>
+  </div>
+  <div class="table-responsive">
+    <table class="table table-striped table-bordered table-hover text-center">
+      <thead class="table-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Firstname</th>
+          <th scope="col">Email</th>
+          <th >Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of users">
+          <th scope="row">{{ user.id }}</th>
+          <td>{{ user.name }}</td>
+          <td>{{ user.firstname }}</td>
+          <td>{{ user.email }}</td>
+          <td class="">
+            <a routerLink="" class="btn btn-sm btn-outline-secondary"><fa-icon [icon]="faEdit"></fa-icon></a>
+            <a routerLink="" class="btn btn-sm btn-outline-secondary"><fa-icon [icon]="faTrash"></fa-icon></a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <a routerLink="" class="btn btn-outline-secondary">Back</a>
+</div>
