--- a/src/app/users/components/user/user.component.html
+++ b/src/app/users/components/user/user.component.html
@@ -1,1 +1,23 @@
-<p>user works!</p>
+<div class="container" *ngIf="user$ | async as user">
+  <div class="mt-4 mb-4 p-3 d-flex justify-content-center">
+    <div class="card p-4">
+      <div class="image d-flex flex-column justify-content-center align-items-center">
+        <button class="btn btn-secondary rounded-circle">
+          <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" alt="profile image"/>
+        </button>
+        <h4 class="mt-3 card-title text-center">{{ user.firstname }} {{ user.name | uppercase }}</h4>
+        <a routerLink="/users/{{ user.id }}/edit" class="mb-2 btn btn-sm btn-outline-secondary">
+          <fa-icon [icon]="faEdit"></fa-icon>
+        </a>
+        <span class="text-muted card-text">{{ user.email }}</span>
+        <span class="card-text">{{ user.roles }}</span>
+      </div>
+    </div>
+  </div>
+  <div class="d-flex flex-column justify-content-center align-items-center">
+    <a routerLink="/users" class="btn btn-sm btn-outline-secondary">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+       Back
+    </a>
+  </div>
+</div>
