add: user-edit.component, arrowLeft on user-list, Roles: ROLE to user-show

--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -28,5 +28,8 @@
       </tbody>
     </table>
   </div>
-  <a routerLink="" class="btn btn-outline-secondary">Back</a>
+  <a routerLink="" class="btn btn-outline-secondary">
+    <fa-icon [icon]="faArrowLeft"></fa-icon>
+     Back
+  </a>
 </div>
