--- a/src/app/users/components/user/user.component.html
+++ b/src/app/users/components/user/user.component.html
@@ -10,7 +10,7 @@
           <fa-icon [icon]="faEdit"></fa-icon>
         </a>
         <span class="text-muted card-text">{{ user.email }}</span>
-        <span class="card-text">{{ user.roles }}</span>
+        <span class="card-text text-center">Roles: {{ user.roles }}</span>
       </div>
     </div>
   </div>
