--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -26,7 +26,7 @@
           </div>
       </div>
     </fieldset>
-    <div class="action-buttons">
+    <div class="action-buttons mt-3">
       <button type="submit" class="btn btn-primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button>
     </div>
   </form>
