--- a/src/app/users/components/user-form/user-form.component.html
+++ b/src/app/users/components/user-form/user-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form class="form-card col-md-6 " [formGroup]="userForm">
     <fieldset>
-      <legend>{{ formLegend}}</legend>
+      <legend>{{ formLegend }}</legend>
       <!-- **** NAME **** -->
       <div class="form-floating mb-3">
         <input id="name" type="text" class="form-control"
@@ -65,38 +65,37 @@
         </div>
       </div>
 
-    <!-- **** CONFIRM PASSWORD **** -->
-    <div class="form-floating mb-3">
-      <input id="confirm_password" type="password" class="form-control"
-        [class.is-invalid]="f.confirm_password.invalid && f.confirm_password.touched"
-        formControlName="confirm_password" placeholder="Confirm" required>
-      <label for="confirm_password" class="form-label">Confirm password:</label>
+      <!-- **** CONFIRM PASSWORD **** -->
+      <div class="form-floating mb-3">
+        <input id="confirm_password" type="password" class="form-control"
+          [class.is-invalid]="f.confirm_password.invalid && f.confirm_password.touched"
+          formControlName="confirm_password" placeholder="Confirm" required>
+        <label for="confirm_password" class="form-label">Confirm password:</label>
 
-      <div *ngIf="(f.confirm_password.invalid && f.confirm_password.touched) || f.confirm_password.dirty">
-        <!--question mark(?) is a safe navigation operator-->
-        <small *ngIf="passwordMatchError" class="text-danger">
-          Password does not match
-        </small>
+        <div *ngIf="(f.confirm_password.invalid && f.confirm_password.touched) || f.confirm_password.dirty">
+          <!--question mark(?) is a safe navigation operator-->
+          <small *ngIf="passwordMatchError" class="text-danger">Password does not match</small>
+        </div>
       </div>
-    </div>
 
-    <!-- **** ROLES **** -->
-    <div class="form-floating mb-3">
-      <select id="roles" class="form-select" aria-label="Default select example" (change)="changeRoles($event)">
-        <option value="ROLE_USER" selected>User</option>
-        <option value="ROLE_ADMIN">Admin</option>
-      </select>
-      <label for="roles" class="form-label">Roles:</label>
+      <!-- **** ROLES **** -->
+      <div class="form-floating mb-3">
+        <select id="roles" class="form-select" aria-label="Default select example" (change)="changeRoles($event)">
+          <option value="ROLE_USER" selected>User</option>
+          <option value="ROLE_ADMIN">Admin</option>
+        </select>
+        <label for="roles" class="form-label">Roles:</label>
 
-      <div *ngIf="(f.roles.invalid && f.roles.touched) || f.roles.dirty">
-        <!--question mark(?) is a safe navigation operator-->
-        <small *ngIf="f.roles.errors?.required" class="text-danger">Roles is required</small>
+        <div *ngIf="(f.roles.invalid && f.roles.touched) || f.roles.dirty">
+          <!--question mark(?) is a safe navigation operator-->
+          <small *ngIf="f.roles.errors?.required" class="text-danger">Roles is required</small>
+        </div>
       </div>
-    </div>
-
     </fieldset>
+    <!-- **** ID on Edit **** -->
+    <input id="id" class="form-control" *ngIf="f.id" type="hidden" formControlName="id"/>
     <div class="action-buttons mt-3">
-      <button type="submit" class="btn btn-primary" (click)="onSubmit()" [disabled]="userForm.invalid">Enregistrer</button>
+      <button type="submit" class="btn btn-primary" (click)="onSubmit()" [disabled]="userForm.invalid">Save</button>
     </div>
   </form>
 </div>
