--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -11,6 +11,7 @@
           <th scope="col">Name</th>
           <th scope="col">Firstname</th>
           <th scope="col">Email</th>
+          <th scope="col">Roles</th>
           <th >Actions</th>
         </tr>
       </thead>
@@ -20,6 +21,7 @@
           <td>{{ user.name }}</td>
           <td>{{ user.firstname }}</td>
           <td>{{ user.email }}</td>
+          <td>{{ user.roles }}</td>
           <td class="">
             <a routerLink="/users/{{ user.id }}" class="btn btn-sm btn-outline-secondary"><fa-icon [icon]="faEye"></fa-icon></a>
             <a routerLink="/users/{{ user.id }}" class="btn btn-sm btn-outline-secondary"><fa-icon [icon]="faTrash"></fa-icon></a>
