--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -6,7 +6,7 @@
           <label for="email" class="form-label">Email:</label>
           <input id="email" type="email" class="form-control"
             [class.is-invalid]="email.invalid && email.touched"
-            formControlName="email" required>
+            formControlName="email">
 
           <div *ngIf="(email.invalid && email.touched) || email.dirty">
             <!--question mark(?) is a safe navigation operator-->
@@ -18,7 +18,7 @@
           <label for="password" class="form-label">Password:</label>
           <input id="password" type="password" class="form-control"
             [class.is-invalid]="password.invalid && password.touched"
-            formControlName="password" required>
+            formControlName="password">
 
           <div *ngIf="(password.invalid && password.touched) || password.dirty">
             <!--question mark(?) is a safe navigation operator-->
