--- a/src/app/users/components/user-form/user-form.component.html
+++ b/src/app/users/components/user-form/user-form.component.html
@@ -80,8 +80,8 @@
 
       <!-- **** ROLES **** -->
       <div class="form-floating mb-3">
-        <select id="roles" class="form-select" aria-label="Default select example" (change)="changeRoles($event)">
-          <option value="ROLE_USER" selected>User</option>
+        <select id="roles" class="form-select" aria-label="Default select example" (change)="changeRoles($event)" formControlName="roles">
+          <option value="ROLE_USER">User</option>
           <option value="ROLE_ADMIN">Admin</option>
         </select>
         <label for="roles" class="form-label">Roles:</label>
