autofocus on first input

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -6,7 +6,7 @@
           <label for="email" class="form-label">Email:</label>
           <input id="email" type="email" class="form-control"
             [class.is-invalid]="email.invalid && email.touched"
-            formControlName="email">
+            formControlName="email" autofocus>
 
           <div *ngIf="(email.invalid && email.touched) || email.dirty">
             <!--question mark(?) is a safe navigation operator-->
