--- a/src/app/shared/components/delete-modal-confirm/delete-modal-confirm.component.html
+++ b/src/app/shared/components/delete-modal-confirm/delete-modal-confirm.component.html
@@ -1,12 +1,12 @@
 <div class="modal-header">
   <h4 class="modal-title" id="modal-title">Delete</h4>
-  <button type="button" class="btn-close" aria-describedby="modal-title" (click)="modal.dismiss('Cross click')"></button>
+  <button type="button" class="btn-close" aria-describedby="modal-title" (click)="modal.dismiss('Delete cross click')"></button>
 </div>
 <div class="modal-body">
-  <p><strong>Are you sure you want to delete <span class="text-primary">"{{ toBeDeletedEntity }}"</span> ?</strong></p>
+  <p><strong>Are you sure you want to delete <span class="text-primary">"{{ toBeDeletedEntityName }}"</span> ?</strong></p>
   <p class="text-danger">This operation can not be undone.</p>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cancel click')">Cancel</button>
-  <button type="button" class="btn btn-danger" (click)="modal.close('Ok click')">Ok</button>
+  <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Delete cancel')">Cancel</button>
+  <button type="button" class="btn btn-danger" (click)="modal.close('Delete')">Ok</button>
 </div>
