edit onLogin to handle redirection

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
-  <form class="form-card col-md-3" [formGroup]="loginForm">
+  <form class="form-card col-xs-3" [formGroup]="loginForm">
     <fieldset>
       <legend>Login</legend>
       <div class="form-group">
