--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -2,6 +2,9 @@
   <form class="form-card col-xs-3" [formGroup]="loginForm">
     <fieldset>
       <legend>Login</legend>
+      <div *ngIf="isLoginFailed" class="col-xs-3 border border-danger rounded p-2">
+        <small class="text-danger">Login Failed ! <br> Please check your email or password.</small>
+      </div>
       <div class="form-group">
           <label for="email" class="form-label">Email:</label>
           <input id="email" type="email" class="form-control"
@@ -10,8 +13,8 @@
 
           <div *ngIf="(email.invalid && email.touched) || email.dirty">
             <!--question mark(?) is a safe navigation operator-->
-            <small *ngIf="email.errors?.required" class="text-danger">Email is required</small>
-            <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address</small>
+            <small *ngIf="email.errors?.required" class="text-danger">Email is required.</small>
+            <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address.</small>
           </div>
       </div>
       <div class="form-group">
@@ -22,7 +25,7 @@
 
           <div *ngIf="(password.invalid && password.touched) || password.dirty">
             <!--question mark(?) is a safe navigation operator-->
-            <small *ngIf="password.errors?.required" class="text-danger">Password is required</small>
+            <small *ngIf="password.errors?.required" class="text-danger">Password is required.</small>
           </div>
       </div>
     </fieldset>
