--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,36 +1,41 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
-  <form class="form-card col-xs-3" [formGroup]="loginForm">
-    <fieldset>
-      <legend>Login</legend>
-      <div *ngIf="isLoginFailed" class="col-xs-3 border border-danger rounded p-2">
-        <small class="text-danger">Login Failed ! <br> Please check your email or password.</small>
-      </div>
-      <div class="form-group">
-          <label for="email" class="form-label">Email:</label>
-          <input id="email" type="email" class="form-control"
-            [class.is-invalid]="email.invalid && email.touched"
-            formControlName="email" autofocus>
+  <div>
+    <form class="form-card col-xs-3" [formGroup]="loginForm">
+      <fieldset>
+        <legend>Login</legend>
+        <div *ngIf="isLoginFailed" class="col-xs-3 border border-danger rounded p-2">
+          <small class="text-danger">Login Failed ! <br> Please check your email or password.</small>
+        </div>
+        <div class="form-group">
+            <label for="email" class="form-label">Email:</label>
+            <input id="email" type="email" class="form-control"
+              [class.is-invalid]="email.invalid && email.touched"
+              formControlName="email" autofocus>
 
-          <div *ngIf="(email.invalid && email.touched) || email.dirty">
-            <!--question mark(?) is a safe navigation operator-->
-            <small *ngIf="email.errors?.required" class="text-danger">Email is required.</small>
-            <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address.</small>
-          </div>
-      </div>
-      <div class="form-group">
-          <label for="password" class="form-label">Password:</label>
-          <input id="password" type="password" class="form-control"
-            [class.is-invalid]="password.invalid && password.touched"
-            formControlName="password">
+            <div *ngIf="(email.invalid && email.touched) || email.dirty">
+              <!--question mark(?) is a safe navigation operator-->
+              <small *ngIf="email.errors?.required" class="text-danger">Email is required.</small>
+              <small *ngIf="email.errors?.email" class="text-danger">Please provide a valid email address.</small>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password" class="form-label">Password:</label>
+            <input id="password" type="password" class="form-control"
+              [class.is-invalid]="password.invalid && password.touched"
+              formControlName="password">
 
-          <div *ngIf="(password.invalid && password.touched) || password.dirty">
-            <!--question mark(?) is a safe navigation operator-->
-            <small *ngIf="password.errors?.required" class="text-danger">Password is required.</small>
-          </div>
+            <div *ngIf="(password.invalid && password.touched) || password.dirty">
+              <!--question mark(?) is a safe navigation operator-->
+              <small *ngIf="password.errors?.required" class="text-danger">Password is required.</small>
+            </div>
+        </div>
+      </fieldset>
+      <div class="action-buttons mt-3">
+        <button type="submit" class="btn btn-primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button>
       </div>
-    </fieldset>
-    <div class="action-buttons mt-3">
-      <button type="submit" class="btn btn-primary" (click)="onLogin()" [disabled]="loginForm.invalid">Login</button>
+    </form>
+    <div class="d-flex align-items-center justify-content-center">
+      <a class="text-primary" routerLink="/auth/forgot-password">Forgot password ?</a>
     </div>
-  </form>
+  </div>
 </div>
