--- a/src/app/auth/components/reset-password/reset-password.component.html
+++ b/src/app/auth/components/reset-password/reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex align-items-center justify-content-center vh-100">
-  <div class="container">
-    <form class="form-card col-md-4" [formGroup]="passwordForm">
+  <div class="col-md-4">
+    <form class="form-card" [formGroup]="passwordForm">
       <fieldset>
         <legend>Reset password</legend>
         <!-- **** PASSWORD **** -->
@@ -39,15 +39,13 @@
         </div>
       </fieldset>
       <div class="action-buttons mt-3">
-        <button type="submit" class="btn btn-primary" (click)="onSubmit()" [disabled]="passwordForm.invalid">Submit</button>
+        <button type="submit" class="btn btn-outline-secondary" (click)="onSubmit()" [disabled]="passwordForm.invalid">Submit</button>
       </div>
     </form>
-    <div class="d-flex flex-column justify-content-center align-items-center">
-      <a routerLink="/auth/login" class="btn btn-sm btn-outline-secondary">
-        <fa-icon [icon]="faArrowLeft"></fa-icon>
-         Back
-      </a>
-    </div>
+    <a routerLink="/auth/login" class="btn btn-outline-secondary">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+       Back
+    </a>
   </div>
 
 </div>
