--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+  <nav class="navbar navbar-expand-sm navbar-light border-bottom" style="background-color: #fff;">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Logo</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
@@ -19,7 +19,7 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item d-flex">
-            <a class="btn btn-outline-light" type="button" (click)="logout()">Logout</a>
+            <a class="btn btn-outline-secondary" type="button" (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
