--- a/src/app/users/components/user/user.component.html
+++ b/src/app/users/components/user/user.component.html
@@ -2,20 +2,20 @@
   <div class="mt-4 mb-4 p-3 d-flex justify-content-center">
     <div class="card p-4">
       <div class="image d-flex flex-column justify-content-center align-items-center">
-        <button class="btn btn-secondary rounded-circle">
+        <a class="btn btn-secondary rounded-circle">
           <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" alt="profile image"/>
-        </button>
+        </a>
         <h4 class="mt-3 card-title text-center">{{ user.firstname }} {{ user.name | uppercase }}</h4>
         <a routerLink="/users/{{ user.id }}/edit" class="mb-2 btn btn-sm btn-outline-secondary">
           <fa-icon [icon]="faEdit"></fa-icon>
         </a>
         <span class="text-muted card-text">{{ user.email }}</span>
-        <span class="card-text text-center">Roles: {{ user.roles }}</span>
+        <span class="card-text text-center">Roles: {{ user.roles[0].substr(5) }}</span>
       </div>
     </div>
   </div>
   <div class="d-flex flex-column justify-content-center align-items-center">
-    <a routerLink="/users" class="btn btn-sm btn-outline-secondary">
+    <a routerLink="/users" class="btn btn-outline-secondary">
       <fa-icon [icon]="faArrowLeft"></fa-icon>
        Back
     </a>
