--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header *ngIf="isLogged"></app-header>
+<app-header *ngIf="!router.url.includes('auth')"></app-header>
 <router-outlet></router-outlet>
