--- a/src/app/users/components/user-list/user-list.component.html
+++ b/src/app/users/components/user-list/user-list.component.html
@@ -11,7 +11,7 @@
       <a routerLink="/users/create" class="btn btn-outline-secondary align-middle mt-1">+</a>
     </div>
   </div>
-  <div class="table-responsive">
+  <div class="table-responsive mb-3">
     <table class="table table-striped table-bordered table-hover text-center">
       <thead class="table-light">
         <tr>
@@ -30,20 +30,33 @@
           <td>{{ user.firstname }}</td>
           <td>{{ user.email }}</td>
           <td>{{ user.roles }}</td>
-          <td>
-            <a routerLink="/users/{{ user.id }}" class="btn btn-sm btn-outline-secondary"><fa-icon [icon]="faEye"></fa-icon></a>
-            <span class="col-md-3 offset-md-2"></span>
+          <td class="d-flex justify-content-around">
+            <a [routerLink]="['/users', user.id]" class="btn btn-sm btn-outline-secondary">
+              <fa-icon [icon]="faEye"></fa-icon>
+            </a>
             <app-delete-modal [toBeDeletedEntity]="'users'"
               [toBeDeletedId]="user.id"
-              [toBeDeletedEntityName]="user.firstname + ' ' + user.name">
-            </app-delete-modal>
+              [toBeDeletedEntityName]="user.firstname + ' ' + user.name"></app-delete-modal>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <a routerLink="" class="btn btn-outline-secondary">
-    <fa-icon [icon]="faArrowLeft"></fa-icon>
-     Back
-  </a>
+  <nav aria-label="Page navigation">
+    <a routerLink="" class="btn btn-outline-secondary">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+       Back
+    </a>
+    <ul class="pagination float-end">
+      <li class="page-item" *ngFor="let item of users | paginate: { itemsPerPage: limit,
+        currentPage: page,
+        totalItems: totalItems }"></li>
+    </ul>
+    <pagination-controls class="my-pagination float-end"
+      [autoHide]="true"
+      [responsive]="true"
+      previousLabel=""
+      nextLabel=""
+      (pageChange)="onPageChange($event)"></pagination-controls>
+  </nav>
 </div>
