--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header *ngIf="!router.url.includes('auth') && !router.url.includes('error')"></app-header>
 <router-outlet></router-outlet>
+<ng-http-loader></ng-http-loader>
